--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".SingleActivity" />
+        <activity android:name=".SingleActivity" android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
